# zvmc

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  Cargo.toml  Doxyfile  README.md  appveyor.yml  circle.yml  go.mod
.circleci/: config.yml
bindings/go/qrvmc/: host.c  host.go  host_test.go  loader.c  qrvmc.go  qrvmc_test.go
bindings/go/zvmc/: host_test.go  qrvmc.go  zvmc.go
bindings/java/: .gitignore  CMakeLists.txt  Makefile  settings.gradle
bindings/java/c/: host.c  host.h  qrvmc-vm.c
bindings/java/java/src/main/java/org/theqrl/zvmc/: Host.java  HostContext.java  QrvmcLoaderException.java  QrvmcVm.java
bindings/java/java/src/test/java/org/theqrl/zvmc/: QrvmcTest.java  TestHostContext.java  TestMessage.java
bindings/rust/qrvmc-declare/: Cargo.toml  README.md
bindings/rust/qrvmc-declare-tests/: Cargo.toml
bindings/rust/qrvmc-declare-tests/src/: lib.rs
bindings/rust/qrvmc-declare/src/: lib.rs
bindings/rust/qrvmc-sys/: Cargo.toml  README.md  build.rs  qrvmc.h
bindings/rust/qrvmc-sys/src/: lib.rs
bindings/rust/qrvmc-vm/: Cargo.toml  README.md
bindings/rust/qrvmc-vm/src/: container.rs  lib.rs  types.rs
bindings/rust/zvmc-sys/: zvmc.h
bindings/rust/zvmc-sys/src/: lib.rs
cmake/: Config.cmake.in  QRVMC.cmake
docs/: Host_Guide.md  QRVMC.md  QRVM_Storage_Change_Status.md  VM_Guide.md  VM_Tester.md  custom.dox
examples/: CMakeLists.txt  example.c  example_host.cpp  example_host.h
examples/example-rust-vm/: Cargo.toml
examples/example-rust-vm/src/: lib.rs
examples/example_precompiles_vm/: CMakeLists.txt  example_precompiles_vm.cpp  example_precompiles_vm.h
examples/example_vm/: CMakeLists.txt  example_vm.cpp  example_vm.h
examples/use_instructions_in_cmake/: CMakeLists.txt  use_instructions_in_cmake.c
examples/use_qrvmc_in_cmake/: CMakeLists.txt  use_qrvmc_in_cmake.c
include/qrvmc/: helpers.h  instructions.h  loader.h  mocked_host.hpp  qrvmc.h  qrvmc.hpp  tooling.hpp
include/zvmc/: mocked_host.hpp  zvmc.h  zvmc.hpp
lib/: CMakeLists.txt
lib/instructions/: CMakeLists.txt  instruction_metrics.c  instruction_names.c
lib/loader/: CMakeLists.txt  loader.c
lib/mocked_host/: CMakeLists.txt
lib/tooling/: CMakeLists.txt  run.cpp
test/cmake_package/: CMakeLists.txt
test/compilation/: CMakeLists.txt  compilation_test.c  compilation_test.cxx
test/examples/: CMakeLists.txt
test/gomod/: README  use_qrvmc_test.go
test/tools/: CMakeLists.txt  invalid_code.qrvm
test/unittests/: CMakeLists.txt  cpp_test.cpp  example_vm_test.cpp  filter_iterator_test.cpp  helpers_test.cpp  hex_test.cpp  instructions_test.cpp  loader_mock.h  loader_test.cpp  mocked_host_test.cpp  tooling_test.cpp
test/vmtester/: CMakeLists.txt
tools/: CMakeLists.txt
tools/qrvmc/: CMakeLists.txt  main.cpp
tools/vmtester/: CMakeLists.txt  tests.cpp  vmtester.cpp  vmtester.hpp
