# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "example-rust-vm"
version = "1.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Jake Lang <jak3lang@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "examplerustvm"
crate-type = ["staticlib", "cdylib"]

[dependencies]
qrvmc-sys = { path = "../../bindings/rust/qrvmc-sys" }
qrvmc-vm = { path = "../../bindings/rust/qrvmc-vm" }
qrvmc-declare = { path = "../../bindings/rust/qrvmc-declare" }
