# EVMC: Ethereum Client-VM Connector API.
# Copyright 2019 The EVMC Authors.
# Licensed under the Apache License, Version 2.0.

[package]
name = "qrvmc-declare-tests"
version = "10.1.0"
authors = ["Jake Lang <jak3lang@gmail.com>"]
license = "Apache-2.0"
# TODO(now.youtrack.cloud/issue/TE-11)
repository = "https://github.com/rgeraldes24/qrvmc"
description = "Bindings to QRVMC (VM declare macro) -- Test crate"
edition = "2018"
publish = false

[dependencies]
qrvmc-declare = { path = "../qrvmc-declare" }
qrvmc-sys = { path = "../qrvmc-sys" }
qrvmc-vm = { path = "../qrvmc-vm" }
